Fixed header spacing

--- a/myassets/custom-index.css
+++ b/myassets/custom-index.css
@@ -95,6 +95,6 @@ footer {
     vertical-align: top;
 }
 
-li {
+main li {
     padding: .5em;
 }
